--- a/style.css
+++ b/style.css
@@ -69,22 +69,110 @@ body {
 
 .restaurants {
   background-color: whitesmoke;
+  margin: 30px;
 }
 .restaurants .restaurants_cards {
   display: flex;
   flex-wrap: wrap;
-  gap: 20px;
+  justify-content: center;
+  gap: 40px;
 }
 .restaurants .card {
-  border: 3px solid black;
-  height: 20px;
+  height: 60%;
 }
 .restaurants .images {
-  height: 150px;
-  width: 200px;
+  width: 450px;
 }
 .restaurants .images img {
+  height: 150px;
+  width: 100%;
+  object-fit: cover;
+  border-radius: 20px 20px 0 0;
+  margin-bottom: 0px;
+}
+.restaurants .description {
+  position: relative;
+  background-color: white;
+}
+.restaurants .description h3 {
+  color: black;
+  margin-bottom: 0px;
+  margin-top: -5px;
+}
+.restaurants .description p {
+  color: gray;
+  margin-top: 0px;
+  padding: 3px;
+}
+.restaurants .description i {
+  position: absolute;
+  right: 20px;
+  top: 10px;
+  font-size: 20px;
+}
+
+footer {
+  background-color: #353535;
+  color: white;
+  padding: 10px;
+}
+footer h2 {
+  font-family: "Shrikhand";
+  font-weight: 500;
+  text-align: left;
+}
+
+img {
   max-width: 100%;
+}
+
+h2 {
+  font-family: "Shrikhand";
+}
+
+.menus {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 10px;
+  background-color: whitesmoke;
+}
+.menus h3 {
+  font-weight: 400;
+  position: relative;
+  height: 5px;
+  width: 30px;
+}
+.menus .menus__plats {
+  overflow: hidden;
+}
+.menus .menu-item {
+  display: flex;
+  background-color: white;
+  border-radius: 10px;
+  overflow: hidden;
+  margin: 5px;
+}
+.menus .menu-item__prix {
+  margin-left: auto;
+  font-weight: 900;
+  padding: 10px;
+  display: flex;
+  align-items: flex-end;
+}
+.menus .menu-item__description {
+  padding: 10px;
+  overflow: hidden;
+}
+.menus .menu-item__description h4,
+.menus .menu-item__description p {
+  overflow: hidden;
+  white-space: nowrap;
+}
+.menus .menu-item__check {
+  display: grid;
+  place-items: center;
+  flex-shrink: 0;
+  border-radius: 0 10px 10px 0;
 }
 
 header {
@@ -167,7 +255,7 @@ h2 {
   border-radius: 20px;
   margin-top: 10px;
   box-shadow: 0px 5px 6px -3px #7e7e7e;
-  background-image: linear-gradient(to top, #9356DC, #FF79DA);
+  background-image: linear-gradient(to top, #9356dc, #ff79da);
 }
 
 /*# sourceMappingURL=style.css.map */
