--- a/sass/header.scss
+++ b/sass/header.scss
@@ -1,10 +1,9 @@
 header {
-    box-shadow: 0px 5px 6px lightgrey;
-    padding: 3px;
-  }
+  box-shadow: 0px 5px 6px lightgrey;
+  padding: 3px;
+}
 
-  h1 {
-    font-family: "Shrikhand", cursive;
-    text-align: center;
-    
+h1 {
+  font-family: "Shrikhand";
+  text-align: center;
 }
