--- a/sass/restaurants.scss
+++ b/sass/restaurants.scss
@@ -8,6 +8,20 @@
     justify-content: center;
     gap: 40px;
   }
+  .nouveau {
+    position: relative;
+  }
+  .nouveau::before {
+    content: "Nouveau";
+    position: absolute;
+    background-color: lightgreen;
+    width: 70px;
+    height: 20px;
+    text-align: center;
+    right: 10px;
+    top: 10px;
+    color: black;
+  }
 
   .card {
     height: 60%;
@@ -42,6 +56,17 @@
       right: 20px;
       top: 10px;
       font-size: 20px;
+    }
+    .fas {
+      color: transparent;
+      background-image: linear-gradient(to top, #9356dc, #ff79da);
+      background-clip: text;
+      -webkit-background-clip: text;
+      opacity: 0;
+      transition: all 200ms;
+    }
+    &:hover .fas {
+      opacity: 3;
     }
   }
 }
