--- a/sass/resto1.scss
+++ b/sass/resto1.scss
@@ -1,8 +1,9 @@
 img {
-  max-width: 100%;
-}
-h2 {
-  font-family: "Shrikhand";
+  display: block;
+  width: 100%;
+  height: 70vh;
+  object-fit: cover;
+  object-position: center;
 }
 
 .menus {
@@ -11,7 +12,9 @@ h2 {
   gap: 10px;
   background-color: whitesmoke;
 
-  h3 {
+  h3,
+  h2 {
+    font-family: "Shrikhand";
     font-weight: 400;
     position: relative;
     height: 5px;
@@ -22,11 +25,19 @@ h2 {
   }
 
   .menu-item {
+    $numberOfItems: 3;
+    @for $i from 1 through $numberOfItems {
+      &:nth-child(#{$i}) {
+        animation-delay: 200ms * $i;
+      }
+    }
     display: flex;
     background-color: white;
     border-radius: 10px;
     overflow: hidden;
-    margin: 5px;
+    margin: 8px;
+    animation: apparition 2s;
+    animation-fill-mode: both;
   }
 
   .menu-item__prix {
@@ -37,7 +48,7 @@ h2 {
     align-items: flex-end;
   }
   .menu-item__description {
-    padding: 10px;
+    padding: 0px;
     overflow: hidden;
     h4,
     p {
@@ -49,7 +60,38 @@ h2 {
     display: grid;
     place-items: center;
     flex-shrink: 0;
-    $button-width: 40px;
+    $button-width: 4rem;
     border-radius: 0 10px 10px 0;
+    background-color: green;
+    margin-right: -1 * $button-width;
+    width: $button-width;
+    transition: margin-right 0.5s;
+    i {
+      $size: 20px;
+      display: grid;
+      place-items: center;
+      background: white;
+      height: $size;
+      width: $size;
+      border-radius: 20px;
+      color: green;
+    }
+  }
+  &:hover {
+    cursor: pointer;
+    .menu-item__check {
+      margin-right: 0;
+    }
+  }
+
+  @keyframes apparition {
+    0% {
+      transform: translateY(50%);
+      opacity: 0;
+    }
+    100% {
+      transform: translateY(0);
+      opacity: 1;
+    }
   }
 }
