--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ header {
 }
 
 h1 {
-  font-family: "Shrikhand", cursive;
+  font-family: "Shrikhand";
   text-align: center;
 }
 
@@ -67,6 +67,41 @@ body {
   font-family: "Roboto", sans-serif;
 }
 
+a {
+  text-decoration: none;
+}
+
+.loader {
+  background-color: whitesmoke;
+  display: grid;
+  place-items: center;
+  opacity: 0.9;
+  height: 100vh;
+  position: fixed;
+  inset: 0;
+  z-index: 1;
+  animation: blanc 200ms 4s forwards;
+  transform-origin: top;
+}
+.loader i {
+  animation: rotation 4s infinite linear;
+  font-size: 60px;
+  color: purple;
+}
+
+@keyframes blanc {
+  from {
+    transform: scale(1);
+  }
+  to {
+    transform: scale(0);
+  }
+}
+@keyframes rotation {
+  to {
+    transform: rotate(360deg);
+  }
+}
 .restaurants {
   background-color: whitesmoke;
   margin: 30px;
@@ -76,6 +111,20 @@ body {
   flex-wrap: wrap;
   justify-content: center;
   gap: 40px;
+}
+.restaurants .nouveau {
+  position: relative;
+}
+.restaurants .nouveau::before {
+  content: "Nouveau";
+  position: absolute;
+  background-color: lightgreen;
+  width: 70px;
+  height: 20px;
+  text-align: center;
+  right: 10px;
+  top: 10px;
+  color: black;
 }
 .restaurants .card {
   height: 60%;
@@ -110,6 +159,17 @@ body {
   top: 10px;
   font-size: 20px;
 }
+.restaurants .description .fas {
+  color: transparent;
+  background-image: linear-gradient(to top, #9356dc, #ff79da);
+  background-clip: text;
+  -webkit-background-clip: text;
+  opacity: 0;
+  transition: all 200ms;
+}
+.restaurants .description:hover .fas {
+  opacity: 3;
+}
 
 footer {
   background-color: #353535;
@@ -123,11 +183,11 @@ footer h2 {
 }
 
 img {
-  max-width: 100%;
-}
-
-h2 {
-  font-family: "Shrikhand";
+  display: block;
+  width: 100%;
+  height: 70vh;
+  object-fit: cover;
+  object-position: center;
 }
 
 .menus {
@@ -136,7 +196,9 @@ h2 {
   gap: 10px;
   background-color: whitesmoke;
 }
-.menus h3 {
+.menus h3,
+.menus h2 {
+  font-family: "Shrikhand";
   font-weight: 400;
   position: relative;
   height: 5px;
@@ -150,7 +212,18 @@ h2 {
   background-color: white;
   border-radius: 10px;
   overflow: hidden;
-  margin: 5px;
+  margin: 8px;
+  animation: apparition 2s;
+  animation-fill-mode: both;
+}
+.menus .menu-item:nth-child(1) {
+  animation-delay: 200ms;
+}
+.menus .menu-item:nth-child(2) {
+  animation-delay: 400ms;
+}
+.menus .menu-item:nth-child(3) {
+  animation-delay: 600ms;
 }
 .menus .menu-item__prix {
   margin-left: auto;
@@ -160,7 +233,7 @@ h2 {
   align-items: flex-end;
 }
 .menus .menu-item__description {
-  padding: 10px;
+  padding: 0px;
   overflow: hidden;
 }
 .menus .menu-item__description h4,
@@ -173,6 +246,35 @@ h2 {
   place-items: center;
   flex-shrink: 0;
   border-radius: 0 10px 10px 0;
+  background-color: green;
+  margin-right: -4rem;
+  width: 4rem;
+  transition: margin-right 0.5s;
+}
+.menus .menu-item__check i {
+  display: grid;
+  place-items: center;
+  background: white;
+  height: 20px;
+  width: 20px;
+  border-radius: 20px;
+  color: green;
+}
+.menus:hover {
+  cursor: pointer;
+}
+.menus:hover .menu-item__check {
+  margin-right: 0;
+}
+@keyframes apparition {
+  0% {
+    transform: translateY(50%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
 }
 
 header {
