--- a/sass/instructions.scss
+++ b/sass/instructions.scss
@@ -1,20 +1,37 @@
-.instructions ol {
+.instructions {
+  counter-reset: numero;
+  ol {
     display: flex;
-    flex-direction: column;
     gap: 10px;
-  
- li {
-    background-color: #f2f2f2;
-    padding: 10px 20px;
-    border-radius: 10px;
-    margin: 2px 20px;
-    box-shadow: 0px 5px 6px lightgrey;
+    @media (max-width: 1000px) {
+      flex-direction: column;
+    }
   }
-
-  i {
-    margin-right: 6px;
-    color: gray;
-
+}
+li {
+  position: relative;
+  &::before {
+    content: counter(numero);
+    counter-increment: numero;
+    background-color: #9356dc;
+    color: white;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    display: grid;
+    place-items: center;
+    position: absolute;
+    left: -7px;
   }
+  list-style-type: none;
+  background-color: #f2f2f2;
+  padding: 10px 20px;
+  border-radius: 10px;
+  margin: 2px 20px;
+  box-shadow: 0px 5px 6px lightgrey;
+}
 
+i {
+  margin-right: 6px;
+  color: gray;
 }
