--- a/sass/instructions.scss
+++ b/sass/instructions.scss
@@ -1,3 +1,5 @@
+@import "../utils/zoom.scss";
+
 .instructions {
   counter-reset: numero;
   ol {
@@ -28,7 +30,10 @@ li {
   padding: 10px 20px;
   border-radius: 10px;
   margin: 2px 20px;
-  box-shadow: 0px 5px 6px lightgrey;
+  @include shadow;
+  &:hover {
+    @include zoom;
+  }
 }
 
 i {
