--- a/sass/restaurants.scss
+++ b/sass/restaurants.scss
@@ -66,7 +66,15 @@
       transition: all 200ms;
     }
     &:hover .fas {
-      opacity: 3;
+      opacity: 1;
+    }
+  }
+  .btn-check {
+    display: none;
+    &:checked ~ label {
+      .fas {
+        opacity: 1;
+      }
     }
   }
 }
