--- a/sass/resto1.scss
+++ b/sass/resto1.scss
@@ -1,3 +1,12 @@
+@keyframes checkrot {
+  0% {
+    transform: rotate(-270deg);
+  }
+  100% {
+    transform: rotate(0);
+  }
+}
+
 img {
   display: block;
   width: 100%;
@@ -75,10 +84,10 @@ img {
       width: $size;
       border-radius: 20px;
       color: green;
+      animation: checkrot 2s ease;
     }
   }
   &:hover {
-    cursor: pointer;
     .menu-item__check {
       margin-right: 0;
     }
