--- a/sass/resto1.scss
+++ b/sass/resto1.scss
@@ -1,11 +1,4 @@
-@keyframes checkrot {
-  0% {
-    transform: rotate(-270deg);
-  }
-  100% {
-    transform: rotate(0);
-  }
-}
+@use "../utils/mixins.scss";
 
 img {
   display: block;
@@ -15,20 +8,57 @@ img {
   object-position: center;
 }
 
+main h2 {
+  font-family: "Shrikhand";
+  font-weight: 400;
+  position: relative;
+  height: 27px;
+}
+
+.coeur {
+  position: relative;
+  i {
+    position: absolute;
+    right: 20px;
+    top: 10px;
+    font-size: 40px;
+  }
+  .fas {
+    color: transparent;
+    @include mixins.gradient;
+    background-clip: text;
+    -webkit-background-clip: text;
+    opacity: 0;
+    transition: all 200ms;
+    &:hover.fas {
+      opacity: 1;
+    }
+  }
+  .btn-check {
+    display: none;
+    &:checked ~ label {
+      .fas {
+        opacity: 1;
+      }
+    }
+  }
+}
+
 .menus {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 10px;
   background-color: whitesmoke;
 
-  h3,
-  h2 {
+  h3 {
     font-family: "Shrikhand";
-    font-weight: 400;
+    font-weight: 300;
     position: relative;
-    height: 5px;
+    height: 24px;
     width: 30px;
+    color: gray;
   }
+
   .menus__plats {
     overflow: hidden;
   }
@@ -84,10 +114,10 @@ img {
       width: $size;
       border-radius: 20px;
       color: green;
-      animation: checkrot 2s ease;
     }
   }
   &:hover {
+    cursor: pointer;
     .menu-item__check {
       margin-right: 0;
     }
