--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ h1 {
   border-radius: 20px;
   margin-top: 10px;
   box-shadow: 0px 5px 6px -3px #7e7e7e;
-  background-image: linear-gradient(to top, #9356DC, #FF79DA);
+  background-image: linear-gradient(to top, #9356dc, #ff79da);
 }
 
 .instructions {
@@ -50,6 +50,7 @@ h1 {
 }
 .instructions ol {
   display: flex;
+  flex-wrap: wrap;
   gap: 10px;
 }
 @media (max-width: 1000px) {
@@ -65,7 +66,7 @@ li {
   padding: 10px 20px;
   border-radius: 10px;
   margin: 2px 20px;
-  box-shadow: 0px 5px 6px lightgrey;
+  box-shadow: 0px 5px 6px -3px #7e7e7e;
 }
 li::before {
   content: counter(numero);
@@ -215,14 +216,6 @@ footer h2 {
   text-align: left;
 }
 
-@keyframes checkrot {
-  0% {
-    transform: rotate(-270deg);
-  }
-  100% {
-    transform: rotate(0);
-  }
-}
 img {
   display: block;
   width: 100%;
@@ -231,19 +224,53 @@ img {
   object-position: center;
 }
 
+main h2 {
+  font-family: "Shrikhand";
+  font-weight: 400;
+  position: relative;
+  height: 27px;
+}
+
+.coeur {
+  position: relative;
+}
+.coeur i {
+  position: absolute;
+  right: 20px;
+  top: 10px;
+  font-size: 40px;
+}
+.coeur .fas {
+  color: transparent;
+  background-image: linear-gradient(to top, #9356dc, #ff79da);
+  background-clip: text;
+  -webkit-background-clip: text;
+  opacity: 0;
+  transition: all 200ms;
+}
+.coeur .fas:hover.fas {
+  opacity: 1;
+}
+.coeur .btn-check {
+  display: none;
+}
+.coeur .btn-check:checked ~ label .fas {
+  opacity: 1;
+}
+
 .menus {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 10px;
   background-color: whitesmoke;
 }
-.menus h3,
-.menus h2 {
+.menus h3 {
   font-family: "Shrikhand";
-  font-weight: 400;
+  font-weight: 300;
   position: relative;
-  height: 5px;
+  height: 24px;
   width: 30px;
+  color: gray;
 }
 .menus .menus__plats {
   overflow: hidden;
@@ -300,7 +327,9 @@ img {
   width: 20px;
   border-radius: 20px;
   color: green;
-  animation: checkrot 2s ease;
+}
+.menus:hover {
+  cursor: pointer;
 }
 .menus:hover .menu-item__check {
   margin-right: 0;
