--- a/sass/resto1.scss
+++ b/sass/resto1.scss
@@ -13,35 +13,13 @@ main h2 {
   font-weight: 400;
   position: relative;
   height: 27px;
+  background-color: white;
+  border-radius: 10px 10px 0 0;
 }
 
 .coeur {
   position: relative;
-  i {
-    position: absolute;
-    right: 20px;
-    top: 10px;
-    font-size: 40px;
-  }
-  .fas {
-    color: transparent;
-    @include mixins.gradient;
-    background-clip: text;
-    -webkit-background-clip: text;
-    opacity: 0;
-    transition: all 200ms;
-    &:hover.fas {
-      opacity: 1;
-    }
-  }
-  .btn-check {
-    display: none;
-    &:checked ~ label {
-      .fas {
-        opacity: 1;
-      }
-    }
-  }
+  @include mixins.heart;
 }
 
 .menus {
@@ -57,6 +35,15 @@ main h2 {
     height: 24px;
     width: 30px;
     color: gray;
+    &::after {
+      content: "";
+      position: absolute;
+      top: 23px;
+      left: 0;
+      height: 3px;
+      width: 40px;
+      background-color: green;
+    }
   }
 
   .menus__plats {
@@ -77,6 +64,7 @@ main h2 {
     margin: 8px;
     animation: apparition 2s;
     animation-fill-mode: both;
+    @include mixins.shadow-1;
   }
 
   .menu-item__prix {
@@ -85,6 +73,16 @@ main h2 {
     padding: 10px;
     display: flex;
     align-items: flex-end;
+    i {
+      @keyframes spin {
+        0% {
+          transform: rotate(-270deg);
+        }
+        100% {
+          transform: rotate(0);
+        }
+      }
+    }
   }
   .menu-item__description {
     padding: 0px;
@@ -116,10 +114,19 @@ main h2 {
       color: green;
     }
   }
-  &:hover {
-    cursor: pointer;
-    .menu-item__check {
-      margin-right: 0;
+  &:hover .menu-item__check {
+    margin-right: 0;
+  }
+
+  i {
+    animation: spin 1.5s ease-in;
+    @keyframes spin {
+      0% {
+        transform: rotate(-270deg);
+      }
+      100% {
+        transform: rotate(0);
+      }
     }
   }
 
@@ -133,4 +140,10 @@ main h2 {
       opacity: 1;
     }
   }
+}
+.order button {
+  @include mixins.btn;
+  margin-bottom: 15px;
+  margin-left: 45%;
+  @include mixins.shadow-1;
 }
