--- a/sass/selection.scss
+++ b/sass/selection.scss
@@ -10,13 +10,6 @@
     margin-top: 0px;
   }
   button {
-    color: white;
-    font-size: 15px;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 20px;
-    margin-top: 10px;
-    @include mixins.shadow-1;
-    @include mixins.gradient;
+    @include mixins.btn;
   }
 }
