--- a/utils/mixins.scss
+++ b/utils/mixins.scss
@@ -1,11 +1,49 @@
-@mixin shadow-1 {
-  box-shadow: 0px 5px 6px -3px #7e7e7e;
-}
-
 @mixin gradient {
   background-image: linear-gradient(to top, #9356dc, #ff79da);
 }
 
+@mixin shadow-1 {
+  box-shadow: 0px 5px 6px -3px #7e7e7e;
+}
+
 @mixin zoom {
   transform: scale(1.02);
+}
+@mixin btn {
+  color: white;
+  font-size: 15px;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 20px;
+  margin-top: 10px;
+  @include shadow-1;
+  @include gradient;
+}
+
+@mixin heart {
+  i {
+    position: absolute;
+    right: 20px;
+    top: 10px;
+    font-size: 25px;
+  }
+  .fas {
+    color: transparent;
+    background-clip: text;
+    background-image: linear-gradient(to top, #9356dc, #ff79da);
+    -webkit-background-clip: text;
+    opacity: 0;
+    transition: all 200ms;
+    &:hover.fas {
+      opacity: 1;
+    }
+  }
+  .btn-check {
+    display: none;
+    &:checked ~ label {
+      .fas {
+        opacity: 1;
+      }
+    }
+  }
 }
