--- a/sass/resto1.scss
+++ b/sass/resto1.scss
@@ -8,7 +8,7 @@ img {
   object-position: center;
 }
 
-main h2 {
+.nom h2 {
   font-family: "Shrikhand";
   font-weight: 400;
   position: relative;
@@ -65,6 +65,15 @@ main h2 {
     animation: apparition 2s;
     animation-fill-mode: both;
     @include mixins.shadow-1;
+
+    &:hover {
+      i {
+        animation: spin 0.5s ease-in;
+      }
+      .menu-item__check {
+        margin-right: 0;
+      }
+    }
   }
 
   .menu-item__prix {
@@ -114,36 +123,31 @@ main h2 {
       color: green;
     }
   }
-  &:hover .menu-item__check {
-    margin-right: 0;
-  }
-
-  i {
-    animation: spin 1.5s ease-in;
-    @keyframes spin {
-      0% {
-        transform: rotate(-270deg);
-      }
-      100% {
-        transform: rotate(0);
-      }
-    }
-  }
-
-  @keyframes apparition {
-    0% {
-      transform: translateY(50%);
-      opacity: 0;
-    }
-    100% {
-      transform: translateY(0);
-      opacity: 1;
-    }
-  }
 }
 .order button {
-  @include mixins.btn;
   margin-bottom: 15px;
   margin-left: 45%;
   @include mixins.shadow-1;
+  @include mixins.btn;
+  &:hover {
+    @include mixins.zoom;
+  }
+}
+@keyframes spin {
+  0% {
+    transform: rotate(-270deg);
+  }
+  100% {
+    transform: rotate(0);
+  }
+}
+@keyframes apparition {
+  0% {
+    transform: translateY(50%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
 }
