--- a/style.css
+++ b/style.css
@@ -44,6 +44,9 @@ h1 {
   box-shadow: 0px 5px 6px -3px #7e7e7e;
   background-image: linear-gradient(to top, #9356dc, #ff79da);
 }
+.selection button:hover {
+  transform: scale(1.02);
+}
 
 .instructions {
   counter-reset: numero;
@@ -157,6 +160,9 @@ a {
 .restaurants .card {
   height: 60%;
 }
+.restaurants .card:hover {
+  transform: scale(1.02);
+}
 .restaurants .images {
   width: 450px;
 }
@@ -224,7 +230,7 @@ img {
   object-position: center;
 }
 
-main h2 {
+.nom h2 {
   font-family: "Shrikhand";
   font-weight: 400;
   position: relative;
@@ -305,6 +311,12 @@ main h2 {
 .menus .menu-item:nth-child(3) {
   animation-delay: 600ms;
 }
+.menus .menu-item:hover i {
+  animation: spin 0.5s ease-in;
+}
+.menus .menu-item:hover .menu-item__check {
+  margin-right: 0;
+}
 .menus .menu-item__prix {
   margin-left: auto;
   font-weight: 900;
@@ -348,12 +360,24 @@ main h2 {
   border-radius: 20px;
   color: green;
 }
-.menus:hover .menu-item__check {
-  margin-right: 0;
+
+.order button {
+  margin-bottom: 15px;
+  margin-left: 45%;
+  box-shadow: 0px 5px 6px -3px #7e7e7e;
+  color: white;
+  font-size: 15px;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 20px;
+  margin-top: 10px;
+  box-shadow: 0px 5px 6px -3px #7e7e7e;
+  background-image: linear-gradient(to top, #9356dc, #ff79da);
 }
-.menus i {
-  animation: spin 1.5s ease-in;
+.order button:hover {
+  transform: scale(1.02);
 }
+
 @keyframes spin {
   0% {
     transform: rotate(-270deg);
@@ -372,21 +396,6 @@ main h2 {
     opacity: 1;
   }
 }
-
-.order button {
-  color: white;
-  font-size: 15px;
-  padding: 10px 20px;
-  border: none;
-  border-radius: 20px;
-  margin-top: 10px;
-  box-shadow: 0px 5px 6px -3px #7e7e7e;
-  background-image: linear-gradient(to top, #9356dc, #ff79da);
-  margin-bottom: 15px;
-  margin-left: 45%;
-  box-shadow: 0px 5px 6px -3px #7e7e7e;
-}
-
 header {
   box-shadow: 0px 5px 6px lightgrey;
   padding: 3px;
