--- a/sass/resto1.scss
+++ b/sass/resto1.scss
@@ -8,6 +8,24 @@ img {
   object-position: center;
 }
 
+header {
+  position: relative;
+}
+h1 {
+  color: #000;
+}
+.header__arrow {
+  position: absolute;
+  left: 20px;
+  height: 20px;
+  width: 20px;
+  top: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 12px;
+  color: #000;
+}
 .nom h2 {
   font-family: "Shrikhand";
   font-weight: 400;
@@ -42,7 +60,7 @@ img {
       left: 0;
       height: 3px;
       width: 40px;
-      background-color: green;
+      background-color: #99e2d0;
     }
   }
 
@@ -95,20 +113,22 @@ img {
   }
   .menu-item__description {
     padding: 0px;
+    margin-left: 10px;
     overflow: hidden;
     h4,
     p {
       overflow: hidden;
       white-space: nowrap;
+      text-overflow: ellipsis;
     }
   }
   .menu-item__check {
     display: grid;
     place-items: center;
     flex-shrink: 0;
-    $button-width: 4rem;
+    $button-width: 40px;
     border-radius: 0 10px 10px 0;
-    background-color: green;
+    background-color: #99e2d0;
     margin-right: -1 * $button-width;
     width: $button-width;
     transition: margin-right 0.5s;
@@ -120,13 +140,16 @@ img {
       height: $size;
       width: $size;
       border-radius: 20px;
-      color: green;
+      color: #99e2d0;
     }
   }
 }
 .order button {
   margin-bottom: 15px;
-  margin-left: 45%;
+  display: flex;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
   @include mixins.shadow-1;
   @include mixins.btn;
   &:hover {
