--- a/sass/footer.scss
+++ b/sass/footer.scss
@@ -2,6 +2,7 @@ footer {
   background-color: #353535;
   color: white;
   padding: 10px;
+  margin-top: 20px;
   h2 {
     font-family: "Shrikhand";
     font-weight: 500;
