--- a/sass/instructions.scss
+++ b/sass/instructions.scss
@@ -4,10 +4,13 @@
   counter-reset: numero;
   ol {
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: row;
+    margin-left: 16%;
     gap: 10px;
     @media (max-width: 1000px) {
       flex-direction: column;
+      gap: 10px;
+      margin-left: 0px;
     }
   }
 }
