--- a/sass/restaurants.scss
+++ b/sass/restaurants.scss
@@ -2,13 +2,18 @@
 
 .restaurants {
   background-color: whitesmoke;
-  margin: 30px;
+  margin: 30px 30px 0 30px;
 
   .restaurants_cards {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    flex-direction: column;
     gap: 40px;
+    @media (min-width: 1000px) {
+      flex-direction: row;
+      justify-content: center;
+    }
   }
   .nouveau {
     position: relative;
@@ -27,6 +32,10 @@
 
   .card {
     height: 60%;
+    margin: 0 10px;
+    background-color: white;
+    border-radius: 20px;
+    @include mixins.shadow-1;
     &:hover {
       @include mixins.zoom;
     }
@@ -40,20 +49,25 @@
       margin-bottom: 0px;
     }
 
-    width: 450px;
+    width: 100%;
+    @media (min-width: 1000px) {
+      width: 450px;
+    }
   }
 
   .description {
     position: relative;
     background-color: white;
+    border-radius: 20px;
     h3 {
       color: black;
-      margin-bottom: 0px;
-      margin-top: -5px;
+      margin-bottom: 5px;
+      margin-top: 7px;
     }
     p {
       color: gray;
       margin-top: 0px;
+      margin-bottom: 5px;
       padding: 3px;
     }
     .form-check {
