--- a/sass/resto1.scss
+++ b/sass/resto1.scss
@@ -31,6 +31,7 @@ h1 {
   h2 {
     font-family: "Shrikhand";
     font-weight: 400;
+    font-size: 25px;
     position: relative;
     height: 27px;
     background-color: whitesmoke;
