--- a/sass/instructions.scss
+++ b/sass/instructions.scss
@@ -5,11 +5,10 @@
   ol {
     display: flex;
     flex-direction: row;
-    margin-left: 16%;
-    gap: 10px;
+    padding: 0;
     @media (max-width: 1000px) {
       flex-direction: column;
-      gap: 10px;
+      gap: 20px;
       margin-left: 0px;
     }
   }
@@ -31,9 +30,9 @@ li {
   }
   list-style-type: none;
   background-color: #f2f2f2;
-  padding: 10px 20px;
+  padding: 20px 35px;
   border-radius: 10px;
-  margin: 2px 20px;
+  margin: auto;
   @include mixins.shadow-1;
   &:hover {
     @include mixins.zoom;
