--- a/style.css
+++ b/style.css
@@ -54,13 +54,12 @@ h1 {
 .instructions ol {
   display: flex;
   flex-direction: row;
-  margin-left: 16%;
-  gap: 10px;
+  padding: 0;
 }
 @media (max-width: 1000px) {
   .instructions ol {
     flex-direction: column;
-    gap: 10px;
+    gap: 20px;
     margin-left: 0px;
   }
 }
@@ -69,9 +68,9 @@ li {
   position: relative;
   list-style-type: none;
   background-color: #f2f2f2;
-  padding: 10px 20px;
+  padding: 20px 35px;
   border-radius: 10px;
-  margin: 2px 20px;
+  margin: auto;
   box-shadow: 0px 5px 6px -3px #7e7e7e;
 }
 li::before {
@@ -280,6 +279,7 @@ h1 {
 .nom h2 {
   font-family: "Shrikhand";
   font-weight: 400;
+  font-size: 25px;
   position: relative;
   height: 27px;
   background-color: whitesmoke;
@@ -487,9 +487,8 @@ h1 {
 
 .instructions li {
   background-color: #f2f2f2;
-  padding: 10px 20px;
+  padding: 20px 35px;
   border-radius: 10px;
-  margin: 2px 20px;
   box-shadow: 0px 5px 6px lightgrey;
 }
 
