--- a/sass/instructions.scss
+++ b/sass/instructions.scss
@@ -12,6 +12,14 @@
       margin-left: 0px;
     }
   }
+  h2 {
+    text-align: center;
+    font-size: 20px;
+    @media (max-width: 1000px) {
+      text-align: left;
+      margin-left: 39px;
+    }
+  }
 }
 li {
   position: relative;
@@ -20,18 +28,19 @@ li {
     counter-increment: numero;
     background-color: #9356dc;
     color: white;
-    width: 20px;
-    height: 20px;
+    width: 26px;
+    height: 25px;
     border-radius: 50%;
     display: grid;
     place-items: center;
     position: absolute;
-    left: -7px;
+    left: -11px;
   }
   list-style-type: none;
   background-color: #f2f2f2;
-  padding: 20px 35px;
+  padding: 20px 42px;
   border-radius: 10px;
+  font-size: 19px;
   margin: auto;
   @include mixins.shadow-1;
   &:hover {
