--- a/sass/restaurants.scss
+++ b/sass/restaurants.scss
@@ -2,8 +2,17 @@
 
 .restaurants {
   background-color: whitesmoke;
-  margin: 30px 30px 0 30px;
-
+  margin: 30px 25px 0 25px;
+  padding-bottom: 20px;
+  h2 {
+    font-size: 20px;
+    text-align: center;
+    @media (max-width: 1000px) {
+      text-align: left;
+      padding-top: 30px;
+      padding-left: 10px;
+    }
+  }
   .restaurants_cards {
     display: flex;
     flex-wrap: wrap;
@@ -21,13 +30,14 @@
   .nouveau::before {
     content: "Nouveau";
     position: absolute;
-    background-color: lightgreen;
-    width: 70px;
-    height: 20px;
+    background-color: #99e2d0;
+    width: 83px;
+    height: 23px;
+    padding-top: 3px;
     text-align: center;
     right: 10px;
     top: 10px;
-    color: black;
+    color: darkslategrey;
   }
 
   .card {
@@ -63,12 +73,14 @@
       color: black;
       margin-bottom: 5px;
       margin-top: 7px;
+      margin-left: 7px;
     }
     p {
       color: gray;
       margin-top: 0px;
       margin-bottom: 5px;
       padding: 3px;
+      margin-left: 10px;
     }
     .form-check {
       @include mixins.heart;
