--- a/sass/resto1.scss
+++ b/sass/resto1.scss
@@ -6,6 +6,9 @@ img {
   height: 50vh;
   object-fit: cover;
   object-position: center;
+  @media (max-width: 1000px) {
+    height: 30vh;
+  }
 }
 
 header {
@@ -19,15 +22,16 @@ h1 {
   left: 20px;
   height: 40px;
   width: 40px;
-  top: 50%;
+  top: 40%;
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 12px;
+  font-size: 18px;
   color: #000;
 }
 .nom {
   background-color: whitesmoke;
+  padding-bottom: 7px;
   h2 {
     font-family: "Shrikhand";
     font-weight: 400;
@@ -60,6 +64,7 @@ h1 {
     position: relative;
     height: 24px;
     width: 30px;
+    margin-left: 20px;
     color: gray;
     &::after {
       content: "";
@@ -87,7 +92,7 @@ h1 {
     background-color: white;
     border-radius: 10px;
     overflow: hidden;
-    margin: 8px;
+    margin: 15px;
     animation: apparition 2s;
     animation-fill-mode: both;
     @include mixins.shadow-1;
