--- a/sass/footer.scss
+++ b/sass/footer.scss
@@ -8,6 +8,12 @@ footer {
     font-family: "Shrikhand";
     font-weight: 500;
     text-align: left;
+    margin-left: 4px;
+  }
+  h3 {
+    margin-left: 6px;
+    font-size: 16px;
+    font-weight: 400;
   }
   a,
   i {
