--- a/sass/instructions.scss
+++ b/sass/instructions.scss
@@ -28,17 +28,17 @@ li {
     counter-increment: numero;
     background-color: #9356dc;
     color: white;
-    width: 26px;
-    height: 25px;
+    width: 33px;
+    height: 31px;
     border-radius: 50%;
     display: grid;
     place-items: center;
     position: absolute;
-    left: -11px;
+    left: -17px;
   }
   list-style-type: none;
   background-color: #f2f2f2;
-  padding: 20px 42px;
+  padding: 25px 42px;
   border-radius: 10px;
   font-size: 19px;
   margin: auto;
@@ -49,6 +49,14 @@ li {
 }
 
 i {
-  margin-right: 6px;
+  margin-right: 10px;
   color: gray;
+}
+
+span {
+  font-size: 20px;
+}
+
+.composez {
+  margin-right: 13px;
 }
