--- a/sass/resto1.scss
+++ b/sass/resto1.scss
@@ -58,9 +58,9 @@ h1 {
   background-color: whitesmoke;
   margin-top: -45px;
 
-  h3 {
-    font-family: "Shrikhand";
-    font-weight: 300;
+  .h3 {
+    font-family: "Roboto";
+    font-weight: 500;
     position: relative;
     height: 24px;
     width: 30px;
@@ -113,6 +113,7 @@ h1 {
     padding: 10px;
     display: flex;
     align-items: flex-end;
+    margin-bottom: 3px;
     i {
       @keyframes spin {
         0% {
@@ -125,14 +126,32 @@ h1 {
     }
   }
   .menu-item__description {
-    padding: 0px;
-    margin-left: 10px;
+    margin-left: 3px;
+    margin-top: 10px;
+    margin-bottom: 5px;
     overflow: hidden;
-    h4,
-    p {
+    .h4 {
+      color: black;
+      font-weight: 700;
+      margin-bottom: 5px;
+      margin-top: 7px;
+      margin-left: 13px;
       overflow: hidden;
       white-space: nowrap;
       text-overflow: ellipsis;
+      display: block;
+    }
+    .p {
+      color: gray;
+      margin-top: 0px;
+      margin-bottom: 5px;
+      padding: 3px;
+      margin-left: 10px;
+      overflow: hidden;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      display: block;
+      font-size: 18px;
     }
   }
   .menu-item__check {
@@ -154,6 +173,7 @@ h1 {
       width: $size;
       border-radius: 20px;
       color: #99e2d0;
+      margin-right: 1px;
     }
   }
 }
