--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ li {
   position: relative;
   list-style-type: none;
   background-color: #f2f2f2;
-  padding: 20px 42px;
+  padding: 25px 42px;
   border-radius: 10px;
   font-size: 19px;
   margin: auto;
@@ -91,21 +91,29 @@ li::before {
   counter-increment: numero;
   background-color: #9356dc;
   color: white;
-  width: 26px;
-  height: 25px;
+  width: 33px;
+  height: 31px;
   border-radius: 50%;
   display: grid;
   place-items: center;
   position: absolute;
-  left: -11px;
+  left: -17px;
 }
 li:hover {
   transform: scale(1.02);
 }
 
 i {
-  margin-right: 6px;
+  margin-right: 10px;
   color: gray;
+}
+
+span {
+  font-size: 20px;
+}
+
+.composez {
+  margin-right: 13px;
 }
 
 body {
@@ -152,7 +160,7 @@ a {
 .restaurants {
   background-color: whitesmoke;
   margin: 30px 25px 0 25px;
-  padding-bottom: 20px;
+  padding-bottom: 50px;
 }
 .restaurants h2 {
   font-size: 20px;
@@ -227,7 +235,7 @@ a {
   color: black;
   margin-bottom: 5px;
   margin-top: 7px;
-  margin-left: 7px;
+  margin-left: 13px;
 }
 .restaurants .description p {
   color: gray;
@@ -271,6 +279,12 @@ footer h2 {
   font-family: "Shrikhand";
   font-weight: 500;
   text-align: left;
+  margin-left: 4px;
+}
+footer h3 {
+  margin-left: 6px;
+  font-size: 16px;
+  font-weight: 400;
 }
 footer a,
 footer i {
@@ -362,16 +376,16 @@ h1 {
   background-color: whitesmoke;
   margin-top: -45px;
 }
-.menus h3 {
-  font-family: "Shrikhand";
-  font-weight: 300;
+.menus .h3 {
+  font-family: "Roboto";
+  font-weight: 500;
   position: relative;
   height: 24px;
   width: 30px;
   margin-left: 20px;
   color: gray;
 }
-.menus h3::after {
+.menus .h3::after {
   content: "";
   position: absolute;
   top: 23px;
@@ -414,6 +428,7 @@ h1 {
   padding: 10px;
   display: flex;
   align-items: flex-end;
+  margin-bottom: 3px;
 }
 @keyframes spin {
   0% {
@@ -424,15 +439,33 @@ h1 {
   }
 }
 .menus .menu-item__description {
-  padding: 0px;
-  margin-left: 10px;
+  margin-left: 3px;
+  margin-top: 10px;
+  margin-bottom: 5px;
   overflow: hidden;
 }
-.menus .menu-item__description h4,
-.menus .menu-item__description p {
+.menus .menu-item__description .h4 {
+  color: black;
+  font-weight: 700;
+  margin-bottom: 5px;
+  margin-top: 7px;
+  margin-left: 13px;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
+  display: block;
+}
+.menus .menu-item__description .p {
+  color: gray;
+  margin-top: 0px;
+  margin-bottom: 5px;
+  padding: 3px;
+  margin-left: 10px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  display: block;
+  font-size: 18px;
 }
 .menus .menu-item__check {
   display: grid;
@@ -452,6 +485,7 @@ h1 {
   width: 20px;
   border-radius: 20px;
   color: #99e2d0;
+  margin-right: 1px;
 }
 
 .order button {
@@ -527,7 +561,7 @@ h1 {
 
 .instructions li {
   background-color: #f2f2f2;
-  padding: 20px 35px;
+  padding: 25px 42px;
   border-radius: 10px;
   box-shadow: 0px 5px 6px lightgrey;
 }
