--- a/sass/style.scss
+++ b/sass/style.scss
@@ -6,6 +6,7 @@
 @use "./sass/restaurants.scss";
 @use "./sass/footer.scss";
 @use "./sass/resto1.scss";
+@use "./sass/style.scss";
 
 header {
   box-shadow: 0px 5px 23px lightgrey;
